--- a/APIViaCep/Views/Login/Index.cshtml
+++ b/APIViaCep/Views/Login/Index.cshtml
@@ -1,6 +1,20 @@
-﻿@{
+﻿@model LoginModel
+@{
     Layout = "_LayoutDeslogada";
     ViewData["Title"] = "Login";
 }
 
-<p>Minha tela de Login</p>
+<form asp-controller="Login" asp-action="Entrar" method="post">
+    <div class="mb-3">
+        <label for="login" class="form-label">Login</label>
+        <input type="text" asp-for="Login" class="form-control" id="login">
+        @Html.ValidationMessageFor(x => x.Login)
+    </div>
+    <div class="mb-3">
+        <label for="Senha" class="form-label">Senha</label>
+        <input type="password" asp-for="Senha" class="form-control" id="senha">
+        @Html.ValidationMessageFor(x => x.Senha)
+    </div>
+   
+    <button type="submit" class="btn btn-primary">Entrar</button>
+</form>
