--- a/APIViaCep/Views/Endereco/Index.cshtml
+++ b/APIViaCep/Views/Endereco/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Meus Endereços</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Cadastrar Endereço</a>
 </p>
 <table class="table">
     <thead>
