--- a/APIViaCep/Views/Endereco/Create.cshtml
+++ b/APIViaCep/Views/Endereco/Create.cshtml
@@ -14,29 +14,29 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
+                <input asp-for="Nome" class="form-control"/>
                 <span asp-validation-for="Nome" class="text-danger"></span>
 
                 <label asp-for="Cep" class="control-label"></label>
-                <input asp-for="Cep" class="form-control" />
+                <input asp-for="Cep" class="form-control" id="Cep"/>
 
                 <label asp-for="Logradouro" class="control-label"></label>
-                <input asp-for="Logradouro" class="form-control" />
+                <input asp-for="Logradouro" class="form-control" id="Logradouro"/>
 
                 <label asp-for="Complemento" class="control-label"></label>
-                <input asp-for="Complemento" class="form-control" />
+                <input asp-for="Complemento" class="form-control" id="Complemento"/>
 
                 <label asp-for="Bairro" class="control-label"></label>
-                <input asp-for="Bairro" class="form-control" />
+                <input asp-for="Bairro" class="form-control" id="Bairro"/>
 
                 <label asp-for="Cidade" class="control-label"></label>
-                <input asp-for="Cidade" class="form-control" />
+                <input asp-for="Cidade" class="form-control" id="Cidade"/>
 
                 <label asp-for="Uf" class="control-label"></label>
-                <input asp-for="Uf" class="form-control" />
+                <input asp-for="Uf" class="form-control" id="Uf"/>
 
                 <label asp-for="Numero" class="control-label"></label>
-                <input asp-for="Numero" class="form-control" />
+                <input asp-for="Numero" class="form-control" id="Numero"/>
 
 
             </div>
@@ -51,6 +51,7 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+<script></script>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
